--- a/worksbynrfz/eicw/eicw-interactive-2.html
+++ b/worksbynrfz/eicw/eicw-interactive-2.html
@@ -673,7 +673,7 @@
                 <!-- Author -->
                 <div class="about-author d-flex p-4">
                   <div class="bio mr-0 text-center">
-                    <img src="img/bg-img/about.png" alt="profile" class="img-blog-profile img-fluid mb-4">
+                    <img src="../../img/bg-img/about.png" alt="profile" class="img-blog-profile img-fluid mb-4">
                   </div>
                   <div class="desc">
                     <h3 style="font-size: 30px; font-weight: bold;">Nurafian Zulkifli</h3>
