--- a/worksbynrfz/eicw/eicw-interactive.html
+++ b/worksbynrfz/eicw/eicw-interactive.html
@@ -1,3 +1,6 @@
+<!-- Legacy. Main updates to be done at EICW's own standalone page
+ https://nurafianzulkifli.github.io/eicw/ -->
+
 <!DOCTYPE html>
 <html lang="en">
 
