--- a/worksbynrfz/eicw/eicw-interactive-2.html
+++ b/worksbynrfz/eicw/eicw-interactive-2.html
@@ -42,7 +42,7 @@
 
           <nav class="classy-navbar justify-content-between" id="pwNav">
 
-            <a class="nav-brand img-logo" href="index.html"><img class="logo-img" src="img/core-img/logo.png" alt></a>
+            <a class="nav-brand img-logo" href="https://nurafianzulkifli.com/index.html"><img class="logo-img" src="img/core-img/logo.png" alt></a>
 
             <div class="classy-navbar-toggler">
               <span class="navbarToggler"><span></span><span></span><span></span></span>
