--- a/worksbynrfz/eicw/eicw-interactive-2.html
+++ b/worksbynrfz/eicw/eicw-interactive-2.html
@@ -42,7 +42,8 @@
 
           <nav class="classy-navbar justify-content-between" id="pwNav">
 
-            <a class="nav-brand img-logo" href="https://nurafianzulkifli.com/index.html"><img class="logo-img" src="img/core-img/logo.png" alt></a>
+            <a class="nav-brand img-logo" href="https://nurafianzulkifli.com/index.html"><img class="logo-img"
+                src="../../img/core-img/logo.png" alt></a>
 
             <div class="classy-navbar-toggler">
               <span class="navbarToggler"><span></span><span></span><span></span></span>
@@ -141,7 +142,8 @@
                   <h2 class="mb-3 text-center" style="font-size: 30px; font-weight:bold; text-align: left;">Time to get
                     more
                     Experimental!</h2>
-                  <p style="text-align: left;">This is a continuation from the <a href="https://nurafianzulkifli.com/index.html">First
+                  <p style="text-align: left;">This is a continuation from the <a
+                      href="https://nurafianzulkifli.com/index.html">First
                       Page</a> which focuses on
                     enhancements and iterations to the existing New Wayfinding system. This page aims to take
                     a more experimental approach by exploring more Implementation ideas and how the new systems can be
@@ -722,8 +724,8 @@
     </div>
   </footer>
 
-  <script type="text/javascript" id="cookiebanner" src="../../js/cookies-banner.js" data-position="bottom" data-bg="#f2f3e5"
-    data-fg="#000" data-font-family="Onest, sans-serif" data-zindex="12345111111"
+  <script type="text/javascript" id="cookiebanner" src="../../js/cookies-banner.js" data-position="bottom"
+    data-bg="#f2f3e5" data-fg="#000" data-font-family="Onest, sans-serif" data-zindex="12345111111"
     data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
     </script>
 
