--- a/about.html
+++ b/about.html
@@ -319,6 +319,18 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="100ms">
                         <div class="period-date-exp">
+                            Mar 2025 - Present
+                        </div>
+                        <h3 style="font-size: 18px; font-weight: bolder; margin-top: 25px;">National Trades Union Congress (NTUC)</h4>
+                            <p style="font-size: 15px; text-align: left;">
+                                - Associate, Membership Services Division</b>
+                            </p>
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-lg-4">
+                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="100ms">
+                        <div class="period-date-exp">
                             Oct - Nov 2024
                         </div>
                         <h3 style="font-size: 18px; font-weight: bolder; margin-top: 25px;">Alphaeus Pte Ltd</h4>
