2025-03 Cumulative Update for Version 2502 (4.4.90)

--- a/about.html
+++ b/about.html
@@ -138,7 +138,7 @@
                             <i class="fa-solid fa-circle-user"></i>
                         </div>
                         <h3 style="font-size: 18px; font-weight: bolder;">Age</h3>
-                        <h4 style="font-size: 13px;">24 years old</h4>
+                        <h4 id="age" style="font-size: 13px;"></h4>
                     </div>
                 </div>
 
@@ -524,7 +524,6 @@
     <script src="js/pw.bundle.js"></script>
 
     <script src="js/default-assets/active.js"></script>
-
 
 </body>
 
