--- a/worksbynrfz/improve-wf.html
+++ b/worksbynrfz/improve-wf.html
@@ -137,7 +137,7 @@
               </a>
             </div>
           </div>
-          <div class="single_catagory text-center">
+          <!-- <div class="single_catagory text-center">
             <a class="btn wbnrfz_btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false"><i
                 class="fa-solid fa-download"></i>&nbsp; Download Handbooks</a>
             <ul class="dropdown-menu">
@@ -153,6 +153,10 @@
               <li><a class="dropdown-item" href="https://nurafianzulkifli.github.io/eicw/">in
                   Microsite Version</a></li>
             </ul>
+          </div> -->
+          <div class="single_catagory text-center">
+            <a class="btn wbnrfz_btn" href="https://nurafianzulkifli.github.io/eicw/" target="_blank"><i
+                class="fa-solid fa-arrow-up-right-from-square"></i>&nbsp; View Microsite</a>
           </div>
         </div>
       </div>
