--- a/worksbynrfz/sit.html
+++ b/worksbynrfz/sit.html
@@ -224,7 +224,7 @@
                                     aria-hidden="true"></i></a>
                             <a href="https://www.facebook.com/Nrfnzlkf/"><i class="fa-brands fa-facebook"
                                     aria-hidden="true"></i></a>
-                            <a href="https://www.instagram.com/zrfn_lkf/"><i class="fa-brands fa-instagram"
+                            <a href="https://www.instagram.com/nrfzlkf/"><i class="fa-brands fa-instagram"
                                     aria-hidden="true"></i></a>
                         </div>
                     </div>
