2025-05 Feature Update for Version 2505 (5.0.1)

--- a/eicw/eicw-3.html
+++ b/eicw/eicw-3.html
@@ -68,7 +68,7 @@
   </header>
 
   <section class="wbnrfz-summ breadcrumb-area-eicw-cover bg-img parallax" id="cv-img"
-    style="background-image: url(img/cover-light.png); height: 100vh;">
+    style="background-image: url(img/cover-3-light.png); height: 100vh;">
     <div class="wbnrfz_details_blog">
       <div class="container">
         <div class="portfolio-controls d-flex justify-content-between align-items-center">
