2025-05 Feature Update for Version 2505 (5.0.1a)

--- a/eicw/eicw-3.html
+++ b/eicw/eicw-3.html
@@ -166,7 +166,8 @@
           <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
             <div class="info justify-content-center">
 
-              <h2 class="mb-3 text-center" style="font-size: 30px; font-weight:bold ;">Bus Route Diagrams Signages for
+              <h2 class="text-center" style="font-size: 30px; font-weight: bold; margin-top: 2em;">Bus Route Diagrams
+                Signages for
                 key Bus Stops</h2>
               <p style="text-align: left;">Introducing new Bus Route Diagrams Signages for key Bus Stops! (e.g. MRT
                 Stations, Hospitals etc). The route diagrams are here to help commuters visualize roughly the direction
@@ -188,7 +189,8 @@
           <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
             <div class="info justify-content-center">
 
-              <h2 class="mb-3 text-center" style="font-size: 30px; font-weight:bold ;">User Interfaces - LCD Screens
+              <h2 class="text-center" style="font-size: 30px; font-weight: bold; margin-top: 1.2em;">User Interfaces -
+                LCD Screens
               </h2>
               <p style="text-align: left;">In aligning with the current Wayfinding System, I have incorporated the
                 elements of simplicity, clarity, and consistency. The designs aim to ensure that users can easily
@@ -218,7 +220,6 @@
     </div>
   </section>
 
-
   <section class="about-me-summ section-padding-80-0 clearfix" style="padding-bottom: 10px;">
     <div class="wbnrfz_details_body_tchp">
       <div class="container container-mobile">
@@ -228,30 +229,8 @@
           <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
             <div class="info justify-content-center">
 
-              <h2 class="mb-3 text-center" style="font-size: 30px; font-weight:bold ;">Bus Route Diagrams Signages for
-                key Bus Stops</h2>
-              <p style="text-align: left;">Introducing new Bus Route Diagrams Signages for key Bus Stops! (e.g. MRT
-                Stations, Hospitals etc). The route diagrams are here to help commuters visualize roughly the direction
-                of services.
-                <br> For full route
-                details, commuters can refer to the Bus Services Board which lists down the whole Bus Stops.
-              </p>
-            </div>
-
-            <div class="banner-eicw">
-              <a href="img/cs-light.png" id="cs" class="portfolio-img">
-                <img src="img/cs-light.png" id="cs-img" class="img-fluid" alt="cs">
-              </a>
-              <hr>
-            </div>
-          </div>
-
-          <!-- Bus Route Diagrams Signages -->
-          <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
-            <div class="info justify-content-center">
-
-              <h2 class="mb-3 text-center" style="font-size: 30px; font-weight:bold ;">Additional Wayfinding Signages
-              </h2>
+              <h2 class="text-center" style="font-size: 30px; font-weight: bold; margin-top: 0em;">Additional Wayfinding
+                Signages</h2>
               <p style="text-align: left;">Apart from the usual Wayfinding Signages, additional signages can be added to
                 help commuters navigate around the area. The designs shown here are redesigns from paper signages.
                 <br> I have talked about the Paper signages issues previously. Do have a read <a
@@ -268,13 +247,17 @@
                 <img src="img/wfs2-dark.png" id="wfs2-img" class="img-fluid" alt="wfs2">
               </a>
               <hr>
-
             </div>
+
           </div>
+
         </div>
       </div>
     </div>
   </section>
+
+
+
 
 
   <section class="about-me-summ section-padding-80-0 clearfix" style="padding-top: 10px;">
@@ -301,7 +284,9 @@
                     While we wish
                     to do so, it requires time, manpower, and careful planning. Compared to metro systems overseas, some
                     signages
-                    also differ slightly, such as those of Taipei Metro and MTR."</blockquote>
+                    also differ slightly, such as those of Taipei Metro and MTR." <br>
+                    <cite> - <a href="https://imgur.com/9EFau4B">You Yuan - SMRT's Manager, Ops Support</a></cite>
+                  </blockquote>
                   <p>Hence this microsite could be useful in diving in and exploring different ideas that can be used to
                     make
                     the wayfinding
@@ -359,6 +344,7 @@
 
   <script src="../js/scroll.js"></script>
 
+  <script src="../js/preloader.js"></script>
 
 </body>
 
