2025-05 Feature Update for Version 2505 (5.0.4)

--- a/eicw/eicw.html
+++ b/eicw/eicw.html
@@ -68,54 +68,55 @@
     </header>
 
     <section class="wbnrfz-summ breadcrumb-area-eicw-cover bg-img parallax" id="cv-img"
-    style="background-image: url(img/cover-light.png); height: 100vh;">
-    <div class="wbnrfz_details_blog">
-        <div class="container">
-            <div class="portfolio-controls d-flex justify-content-between align-items-center">
-                <!-- Filter Buttons -->
-                <div class="portfolio-filter mt-3">
-                    <div class="col-lg-12">
-                        <div class="main-title">
-                            <nav aria-label="breadcrumb">
-                                <ol class="breadcrumb">
-                                    <li class="breadcrumb-item"><a href="https://nurafianzulkifli.com/index.html"> Home</a>
-                                    </li>
-                                    <li class="breadcrumb-item active"><a href="#">
-                                            EICW
-                                        </a>
-                                    </li>
-                                </ol>
-                            </nav>
-                            <h1 class="brc">Experimenting Improvements of Current Wayfinding</h1>
+        style="background-image: url(img/cover-light.png); height: 100vh;">
+        <div class="wbnrfz_details_blog">
+            <div class="container">
+                <div class="portfolio-controls d-flex justify-content-between align-items-center">
+                    <!-- Filter Buttons -->
+                    <div class="portfolio-filter mt-3">
+                        <div class="col-lg-12">
+                            <div class="main-title">
+                                <nav aria-label="breadcrumb">
+                                    <ol class="breadcrumb">
+                                        <li class="breadcrumb-item"><a href="https://nurafianzulkifli.com/index.html">
+                                                Home</a>
+                                        </li>
+                                        <li class="breadcrumb-item active"><a href="#">
+                                                EICW
+                                            </a>
+                                        </li>
+                                    </ol>
+                                </nav>
+                                <h1 class="brc">Experimenting Improvements of Current Wayfinding</h1>
+                            </div>
                         </div>
                     </div>
+                    <!-- Collapsible Header -->
+                    <div class="collapsible-header" data-bs-toggle="collapse" data-bs-target="#portfolioFilter"
+                        aria-controls="portfolioFilter" style="cursor: pointer;" title="Go To">
+                        <i class="fa-solid fa-chevron-down nav-chev"></i>
+                    </div>
                 </div>
-                <!-- Collapsible Header -->
-                <div class="collapsible-header" data-bs-toggle="collapse" data-bs-target="#portfolioFilter"
-                     aria-controls="portfolioFilter" style="cursor: pointer;" title="Go To">
-                    <i class="fa-solid fa-chevron-down nav-chev"></i>
-                </div>
-            </div>
-            <!-- Collapsible Content -->
-            <div id="portfolioFilter" class="collapse">
-                <div class="portfolio-filter mt-3">
-                    <a href="#">
-                        <button class="btn">Improving Existing Wayfinding Designs.</button>
-                    </a>
-                    <a href="eicw-2.html">
-                        <button class="btn">Let's get more experimental!</button>
-                    </a>
-                    <a href="eicw-3.html">
-                        <button class="btn">Showcasing my own ideas.</button>
-                    </a>
-                    <a href="eicw-4.html">
-                        <button class="btn">CCL6 and the way forward.</button>
-                    </a>
+                <!-- Collapsible Content -->
+                <div id="portfolioFilter" class="collapse">
+                    <div class="portfolio-filter mt-3">
+                        <a href="#">
+                            <button class="btn">Improving Existing Wayfinding Designs.</button>
+                        </a>
+                        <a href="eicw-2.html">
+                            <button class="btn">Let's get more experimental!</button>
+                        </a>
+                        <a href="eicw-3.html">
+                            <button class="btn">Showcasing my own ideas.</button>
+                        </a>
+                        <a href="eicw-4.html">
+                            <button class="btn">CCL6 and the way forward.</button>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 
     <section class="about-me-sum clearfix">
         <div class="wbnrfz_eicw">
@@ -127,7 +128,8 @@
                             <!-- Preface -->
                             <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
                                 <div class="info justify-content-center">
-                                    <h2 class="mb-3 text-center" style="font-size: 30px; font-weight:bold;">Improving Existing Wayfinding Designs/Preface</h2>
+                                    <h2 class="mb-3 text-center" style="font-size: 30px; font-weight:bold;">Improving
+                                        Existing Wayfinding Designs/Preface</h2>
                                     <p style="text-align: left;">The new Wayfinding system was first launched on the
                                         Thomson-East
                                         Coast Line stations. It spots a new design
@@ -150,11 +152,30 @@
                                         well.
                                     </p>
                                 </div>
+
+                                <div class="portfolio-filter portfolio-filter-sub mt-3 wow fadeInUp"
+                                    data-wow-delay="100ms" style="padding-top: 1em;">
+                                    <a href="#typeface">
+                                        <button class="btn">Font Typeface</button>
+                                    </a>
+                                    <a href="#colour">
+                                        <button class="btn">Colour Palettes</button>
+                                    </a>
+                                    <a href="#ci-img">
+                                        <button class="btn">Changes & Improvements over...</button>
+                                    </a>
+                                    <a href="#eia-img">
+                                        <button class="btn">Existing Icon Assets</button>
+                                    </a>
+                                    <a href="#dsb-img">
+                                        <button class="btn">Design Standards Brainstorm</button>
+                                    </a>
+                                </div>
                                 <hr>
                             </div>
 
                             <!-- Font Typeface -->
-                            <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+                            <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms" id="typeface">
                                 <h2 class="mb-3"
                                     style="font-size: 30px; font-weight:bold; text-align: center; padding-top: 10px;">
                                     Font
@@ -168,7 +189,7 @@
                             </div>
 
                             <!-- Colour Palettes -->
-                            <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+                            <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms" id="colour">
                                 <h2 class="mb-3"
                                     style="font-size: 30px; font-weight:bold; text-align: center; padding-top: 10px;">
                                     Colour
@@ -180,8 +201,7 @@
                                 </div>
                                 <div class="banner-eicw">
                                     <a href="img/palettes-light2.png" id="pl2" class="portfolio-img">
-                                        <img src="img/palettes-light2.png" id="pl2-img" class="img-fluid"
-                                            alt="pl2">
+                                        <img src="img/palettes-light2.png" id="pl2-img" class="img-fluid" alt="pl2">
                                     </a>
                                 </div>
                             </div>
@@ -236,8 +256,8 @@
                                         <div class="column column-pic">
                                             <figcaption>
                                                 <a href="img/wo1-light.png" id="wo1" class="portfolio-img ">
-                                                    <img src="img/wo1-light.png" id="wo1-img"
-                                                        class="img-fluid cp-img" alt="wo1">
+                                                    <img src="img/wo1-light.png" id="wo1-img" class="img-fluid cp-img"
+                                                        alt="wo1">
                                                 </a>
                                             </figcaption>
                                         </div>
@@ -245,8 +265,8 @@
                                         <div class="column column-pic">
                                             <figcaption>
                                                 <a href="img/wo2-light.png" id="wo2" class="portfolio-img">
-                                                    <img src="img/wo2-light.png" id="wo2-img"
-                                                        class="img-fluid cp-img" alt="wo2">
+                                                    <img src="img/wo2-light.png" id="wo2-img" class="img-fluid cp-img"
+                                                        alt="wo2">
                                                 </a>
                                             </figcaption>
                                         </div>
@@ -286,8 +306,8 @@
                                         <div class="column column-pic">
                                             <figcaption>
                                                 <a href="img/exit-light.png" id="exit" class="portfolio-img ">
-                                                    <img src="img/exit-light.png" id="exit-img"
-                                                        class="img-fluid cp-img" alt="exit">
+                                                    <img src="img/exit-light.png" id="exit-img" class="img-fluid cp-img"
+                                                        alt="exit">
                                                 </a>
                                             </figcaption>
                                         </div>
@@ -441,8 +461,8 @@
                                         <div class="column column-pic">
                                             <figcaption>
                                                 <a href="img/ed1-light.png" id="ed1" class="portfolio-img ">
-                                                    <img src="img/ed1-light.png" id="ed1-img"
-                                                        class="img-fluid cp-img" alt="ed1">
+                                                    <img src="img/ed1-light.png" id="ed1-img" class="img-fluid cp-img"
+                                                        alt="ed1">
                                                 </a>
                                             </figcaption>
                                         </div>
@@ -509,8 +529,8 @@
                                         <div class="column column-pic">
                                             <figcaption>
                                                 <a href="img/sn-light.png" id="sn" class="portfolio-img ">
-                                                    <img src="img/sn-light.png" id="sn-img"
-                                                        class="img-fluid cp-img" alt="sn">
+                                                    <img src="img/sn-light.png" id="sn-img" class="img-fluid cp-img"
+                                                        alt="sn">
                                                 </a>
                                             </figcaption>
                                         </div>
@@ -556,8 +576,8 @@
                                         <div class="column column-pic">
                                             <figcaption>
                                                 <a href="img/se-light.png" id="se" class="portfolio-img ">
-                                                    <img src="img/se-light.png" id="se-img"
-                                                        class="img-fluid cp-img" alt="se">
+                                                    <img src="img/se-light.png" id="se-img" class="img-fluid cp-img"
+                                                        alt="se">
                                                 </a>
                                             </figcaption>
                                         </div>
@@ -701,8 +721,7 @@
 
                                 <div class="banner-eicw">
                                     <a href="img/ttann-light.png" id="ttann" class="portfolio-img">
-                                        <img src="img/ttann-light.png" id="ttann-img" class="img-fluid"
-                                            alt="ttann">
+                                        <img src="img/ttann-light.png" id="ttann-img" class="img-fluid" alt="ttann">
                                     </a>
                                 </div>
                                 <hr>
@@ -761,16 +780,14 @@
 
                                 <div class="banner-eicw">
                                     <a href="img/edann1-light.png" id="edann1" class="portfolio-img">
-                                        <img src="img/edann1-light.png" id="edann1-img" class="img-fluid"
-                                            alt="edann1">
+                                        <img src="img/edann1-light.png" id="edann1-img" class="img-fluid" alt="edann1">
                                     </a>
                                     <hr>
                                 </div>
 
                                 <div class="banner-eicw">
                                     <a href="img/edann2-light.png" id="edann2" class="portfolio-img">
-                                        <img src="img/edann2-light.png" id="edann2-img" class="img-fluid"
-                                            alt="edann2">
+                                        <img src="img/edann2-light.png" id="edann2-img" class="img-fluid" alt="edann2">
                                     </a>
                                 </div>
                                 <hr>
@@ -795,16 +812,14 @@
 
                                 <div class="banner-eicw">
                                     <a href="img/tsann1-light.png" id="tsann1" class="portfolio-img">
-                                        <img src="img/tsann1-light.png" id="tsann1-img" class="img-fluid"
-                                            alt="tsann1">
+                                        <img src="img/tsann1-light.png" id="tsann1-img" class="img-fluid" alt="tsann1">
                                     </a>
                                     <hr>
                                 </div>
 
                                 <div class="banner-eicw">
                                     <a href="img/tsann2-light.png" id="tsann2" class="portfolio-img">
-                                        <img src="img/tsann2-light.png" id="tsann2-img" class="img-fluid"
-                                            alt="tsann2">
+                                        <img src="img/tsann2-light.png" id="tsann2-img" class="img-fluid" alt="tsann2">
                                     </a>
                                 </div>
                                 <p style="text-align: center;">📸 (Thumbnail on the right):
@@ -834,8 +849,7 @@
 
                                 <div class="banner-eicw">
                                     <a href="img/osann1-light.png" id="osann1" class="portfolio-img">
-                                        <img src="img/osann1-light.png" id="osann1-img" class="img-fluid"
-                                            alt="osann1">
+                                        <img src="img/osann1-light.png" id="osann1-img" class="img-fluid" alt="osann1">
                                     </a>
                                     <p style="text-align: center;">📸 (Thumbnail on the bottom right):
                                         <a
@@ -916,8 +930,8 @@
         </div>
     </footer>
 
-    <script type="text/javascript" id="cookiebanner" src="../js/cookies-banner.js" data-position="bottom" data-bg="#f2f3e5"
-        data-fg="#000" data-font-family="Onest, sans-serif" data-zindex="12345111111"
+    <script type="text/javascript" id="cookiebanner" src="../js/cookies-banner.js" data-position="bottom"
+        data-bg="#f2f3e5" data-fg="#000" data-font-family="Onest, sans-serif" data-zindex="12345111111"
         data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
         </script>
 
