--- a/eicw/eicw-2.html
+++ b/eicw/eicw-2.html
@@ -81,8 +81,7 @@
                                         <li class="breadcrumb-item"><a href="https://nurafianzulkifli.com/index.html">
                                                 Home</a>
                                         </li>
-                                        <li class="breadcrumb-item active"><a
-                                                href="eicw.html">
+                                        <li class="breadcrumb-item active"><a href="eicw.html">
                                                 EICW
                                             </a>
                                         </li>
@@ -113,6 +112,40 @@
                         <a href="eicw-4.html">
                             <button class="btn">CCL6 and the way forward.</button>
                         </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="about-me-summ clearfix">
+        <div class="wbnrfz_details_body">
+            <div class="container container-mobile">
+                <div class="row justify-content-center">
+                    <div class="col-lg-12">
+                        <div class="row justify-content-center">
+                            <!-- Preface -->
+                            <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+                                <div class="info justify-content-center">
+                                    <h2 class="text-center"
+                                        style="font-size: 30px; font-weight:bold; text-align: left;">Enhancing Clarity &
+                                        Fine-Tunes</h2>
+                                    <p style="text-align: left;">For this section, I intend to introduce incremental
+                                        enhancements to the current system. As I mentioned, I do not want another new
+                                        Design System, so I just made use of what is implemented currently and improved
+                                        them further. </i>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="portfolio-filter portfolio-filter-sub mt-3 wow fadeInUp" data-wow-delay="100ms">
+                                <a href="#iu-img">
+                                    <button class="btn">Let's get more experimental!</button>
+                                </a>
+                                <a href="#ie-img">
+                                    <button class="btn">Implementation Explorations</button>
+                                </a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -581,8 +614,8 @@
         </div>
     </footer>
 
-    <script type="text/javascript" id="cookiebanner" src="../js/cookies-banner.js" data-position="bottom" data-bg="#f2f3e5"
-        data-fg="#000" data-font-family="Onest, sans-serif" data-zindex="12345111111"
+    <script type="text/javascript" id="cookiebanner" src="../js/cookies-banner.js" data-position="bottom"
+        data-bg="#f2f3e5" data-fg="#000" data-font-family="Onest, sans-serif" data-zindex="12345111111"
         data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
         </script>
 
