--- a/eicw/eicw-3.html
+++ b/eicw/eicw-3.html
@@ -118,7 +118,7 @@
     </div>
   </section>
 
-  <section class="about-me-summ section-padding-80-0 clearfix">
+  <section class="about-me-summ clearfix">
     <div class="wbnrfz_details_body">
       <div class="container container-mobile">
         <div class="row justify-content-center">
@@ -128,15 +128,21 @@
               <!-- Preface -->
               <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
                 <div class="info justify-content-center">
-                  <h2 class="mb-3 text-center" style="font-size: 30px; font-weight:bold; text-align: left;">Showcasing
-                    my own ideas.</h2>
+                  <h2 class="text-center" style="font-size: 30px; font-weight:bold; text-align: left;">Showcasing
+                    my own ideas</h2>
                   <p style="text-align: left;">This section is dedicated specially to display my ideas & concepts on how
                     I envision the current Wayfinding systems can be applied. It's ok to be ambitious here. The sky is
                     the limit! <i>More ideas will be uploaded as soon as it's ready! Stay tuned!</i></p>
-                  </p>
                 </div>
               </div>
-
+              <div class="portfolio-filter portfolio-filter-sub mt-3 wow fadeInUp" data-wow-delay="100ms">
+                <a href="#iu-img">
+                  <button class="btn">Customized Designs</button>
+                </a>
+                <a href="#postface">
+                  <button class="btn">Postface</button>
+                </a>
+              </div>
             </div>
           </div>
         </div>
@@ -256,10 +262,6 @@
     </div>
   </section>
 
-
-
-
-
   <section class="about-me-summ section-padding-80-0 clearfix" style="padding-top: 10px;">
     <div class="wbnrfz_details_body_tchp">
       <div class="container">
@@ -268,7 +270,7 @@
             <div class="row justify-content-center">
 
               <!-- Postface -->
-              <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+              <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms" id="postface">
                 <div class="info justify-content-center">
                   <h2 class="mb-3 text-center" style="font-size: 30px; font-weight:bold; text-align: left;">Postface
                   </h2>
