--- a/eicw/eicw-4.html
+++ b/eicw/eicw-4.html
@@ -163,8 +163,22 @@
               wrong idea, but it could be something that the LTA can explore in the future, before CCL6 commences
               service in 2026. </p>
             </p>
+
           </div>
-          
+
+          <div class="portfolio-filter portfolio-filter-sub mt-3 wow fadeInUp" data-wow-delay="100ms"
+            style="padding-bottom: 2em;">
+            <a href="#">
+              <button class="btn">Section 1 : Entrance Level</button>
+            </a>
+            <a href="#">
+              <button class="btn">Section 2 : Concourse</button>
+            </a>
+            <a href="#">
+              <button class="btn">Section 3 : Platform</button>
+            </a>
+          </div>
+
           <hr>
 
         </div>
