--- a/works-by-nrfz.html
+++ b/works-by-nrfz.html
@@ -141,7 +141,7 @@
             data-year="2025">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/rBAx6Yy.png" alt>
-              <div class="hover-content-blog">
+              <div class="hover-content-blog align-items-center">
                 <h4>EICW - Implementation Brainstorming</h4>
                 <a class="info" href="worksbynrfz/improve-wf.html" class="portfolio-img"><i
                     class="fa-solid fa-arrow-right"></i></a>
