--- a/eicw/eicw-4.html
+++ b/eicw/eicw-4.html
@@ -163,20 +163,6 @@
               wrong idea, but it could be something that the LTA can explore in the future, before CCL6 commences
               service in 2026. </p>
             </p>
-
-          </div>
-
-          <div class="portfolio-filter portfolio-filter-sub mt-3 wow fadeInUp" data-wow-delay="100ms"
-            style="padding-bottom: 2em;">
-            <a href="#">
-              <button class="btn">Section 1 : Entrance Level</button>
-            </a>
-            <a href="#">
-              <button class="btn">Section 2 : Concourse</button>
-            </a>
-            <a href="#">
-              <button class="btn">Section 3 : Platform</button>
-            </a>
           </div>
 
           <hr>
@@ -219,12 +205,22 @@
               </div>
 
             </div>
-            <p style="text-align: left;">I will showcase my redesigns in different parts, as follows: <br>
-              • <a href="#ent"> Section 1 : Entrance level</a> <br>
-              • <a href="#conc"> Section 2 : Concourse</a> <br>
-              • <a href="#plat"> Section 3 : Platform</a> <br>
-              <!-- • <a href="#it"> Section 4 : In-train</a> -->
+            <p class="wow fadeInUp" data-wow-delay="100ms" style="text-align: center;">I will showcase my redesigns in
+              different parts, as follows:
             </p>
+
+            <div class="portfolio-filter portfolio-filter-sub mt-3 wow fadeInUp" data-wow-delay="100ms"
+              style="padding-bottom: 2em;">
+              <a href="#ent">
+                <button class="btn">Section 1 : Entrance Level</button>
+              </a>
+              <a href="#conc">
+                <button class="btn">Section 2 : Concourse</button>
+              </a>
+              <a href="#plat">
+                <button class="btn">Section 3 : Platform</button>
+              </a>
+            </div>
 
             <p style="text-align: left;"> Do note that for all my ideas, I'll be going with the
               Clockwise/Anti-Clockwise Loop naming conventions, Single Caplet without Interchange and 'Towards' being
