--- a/eicw/eicw-4.html
+++ b/eicw/eicw-4.html
@@ -111,6 +111,9 @@
             <a href="#">
               <button class="btn">CCL6 and the way forward.</button>
             </a>
+            <a href="eicw-5.html">
+              <button class="btn">The Buses' side of things needs love too!</button>
+            </a>
           </div>
         </div>
       </div>
