--- a/eicw/eicw-5.html
+++ b/eicw/eicw-5.html
@@ -111,9 +111,9 @@
             <a href="eicw-4.html">
               <button class="btn">CCL6 and the way forward.</button>
             </a>
-            <a href="#">
+            <!-- <a href="#">
               <button class="btn">The Buses' side of things needs love too!</button>
-            </a>
+            </a> -->
           </div>
         </div>
       </div>
