--- a/eicw/eicw.html
+++ b/eicw/eicw.html
@@ -112,9 +112,9 @@
                         <a href="eicw-4.html">
                             <button class="btn">CCL6 and the way forward.</button>
                         </a>
-                        <a href="eicw-5.html">
+                        <!-- <a href="eicw-5.html">
                             <button class="btn">The Buses' side of things needs love too!</button>
-                        </a>
+                        </a> -->
                     </div>
                 </div>
             </div>
